fix: Remove the jumpy:ness in the refreshpicker

--- a/packages/grafana-ui/src/components/RefreshPicker/_RefreshPicker.scss
+++ b/packages/grafana-ui/src/components/RefreshPicker/_RefreshPicker.scss
@@ -9,11 +9,6 @@
     margin-right: 0;
   }
 
-  .navbar-button:last-child {
-    padding-left: 6px;
-    padding-right: 2px;
-  }
-
   .gf-form-input--form-dropdown {
     position: static;
   }
